<resources>
    <string name="app_name">Datos de Usuario</string>
    <string name="edittext">Nombre Completo</string>
    <string name="editdate">Fecha de Nacimiento</string>
    <string name="selectfecha">Seleccionar Fecha de Nacimiento</string>
    <string name="tel">Número Telefónico</string>
    <string name="email">Correo Electrónico</string>
    <string name="cescripcion">Descripción de Contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirmar">Confirmar Datos</string>
    <string name="editar">Editar Datos</string>
</resources>
